[package]
name = "openmcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp-proxy = "0.1.2"
rmcp = { version = "0.1.5", features = [
  "server",
  "client",
  "transport-sse-server",
  "transport-sse",
  "transport-child-process",
  "transport-io",
] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.15" }
clap = { version = "4.5.37", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
