[package]
name = "openmcp"
version = "0.1.4"
edition = "2024"
description = "OpenMCP Server Proxy CLI"
license = "Apache-2.0"
documentation = "https://docs.rs/openmcp"
homepage = "https://github.com/decentralized-mcp/proxy"
repository = "https://github.com/decentralized-mcp/proxy"

[dependencies]
rmcp-proxy = "0.1.3"
rmcp = { version = "0.1.5", features = [
  "server",
  "client",
  "transport-sse-server",
  "transport-sse",
  "transport-child-process",
  "transport-io",
] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.15" }
clap = { version = "4.5.37", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
openssl = { version = "0.10", features = ["vendored"] }
