[package]
name = "cardea"
version = "0.2.0"
edition = "2024"
description = "Cardea - MCP Server Proxy CLI"
license = "Apache-2.0"
documentation = "https://docs.rs/cardea"
homepage = "https://github.com/cardea-mcp/cardea-cli"
repository = "https://github.com/cardea-mcp/cardea-cli"

[dependencies]
rmcp-proxy = { git = "https://github.com/decentralized-mcp/mcp-proxy.git", branch = "feat-middleware" }
# rmcp-proxy = { path = "../rmcp-proxy" }
rmcp = { git = "https://github.com/decentralized-mcp/rust-sdk.git", branch = "feat-middleware", features = [
  # rmcp = { path = "../rust-sdk/crates/rmcp", features = [
  "server",
  "client",
  "transport-sse-server",
  "transport-sse",
  "transport-child-process",
  "transport-io",
] }
reqwest = { version = "0.12.16", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.15" }
clap = { version = "4.5.37", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
openssl = { version = "0.10", features = ["vendored"] }
axum = "0.8"
tower = "0.5.2"
serde = { version = "1", features = ["derive"] }
tokio-stream = "0.1"
serde_json = "1"
async-trait = "0.1"
jsonwebtoken = "9"
futures-util = "0.3.31"
